--- a/Login-SignUp/Firebase - SignUp/signUp.html
+++ b/Login-SignUp/Firebase - SignUp/signUp.html
@@ -23,6 +23,16 @@
               </h1>
               <div class="form-floating mb-3 mt-3">
                 <input
+                  type="text"
+                  class="form-control"
+                  id="floatingName"
+                  class="nameInput"
+                  placeholder="John Doe"
+                />
+                <label for="floatingInput">Enter your full name</label>
+              </div>
+              <div class="form-floating mb-3 mt-3">
+                <input
                   type="email"
                   class="form-control"
                   id="floatingInput"
