--- a/index.html
+++ b/index.html
@@ -10,91 +10,30 @@
       crossorigin="anonymous"
     />
     <!-- <link rel="stylesheet" href="styles/dashboard.css" /> -->
-    <title>Products Add</title>
+    <title>Products</title>
   </head>
-
   <body>
-    <div class="container" id="main">
-      <button class="btn btn-primary" id="redirect">Go To Products Page</button>
-      <div class="row" id="row">
-        <div class="col-12 col-md-12">
-          <div class="student-form-container">
-            <h1>Add Products</h1>
-            <form id="addProductsForm">
-              <div class="row">
-                <div class="col-12 col-md-6">
-                  <div class="mb-3">
-                    <label for="pName" class="form-label">Product Name</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="pName"
-                      placeholder="Product Name"
-                    />
-                  </div>
-                </div>
-                <div class="col-12 col-md-6">
-                  <div class="mb-3">
-                    <label for="description" class="form-label"
-                      >Description</label
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="description"
-                      placeholder="Description"
-                    />
-                  </div>
-                </div>
-                <div class="col-12 col-md-6">
-                  <div class="mb-3">
-                    <label for="price" class="form-label">Price</label>
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="price"
-                      placeholder="Price"
-                    />
-                  </div>
-                </div>
-                <div class="col-12 col-md-6">
-                  <div class="mb-3">
-                    <div class="card col-2">
-                      <img src="" alt="" id="card-image" width="200px" />
-                    </div>
-                    <label for="product-image" class="form-label"
-                      >Product Image</label
-                    ><br />
-                    <input
-                      type="file"
-                      name="product-image"
-                      id="product-image"
-                      accept="image/*"
-                    />
-                  </div>
-                </div>
-                <div class="col-12 col-md-12">
-                  <button class="btn btn-primary w-100" type="submit">
-                    SUBMIT
-                  </button>
-                </div>
-                <div class="row col-12 col-md-12 text-center" id="table-div">
-                  <table id="table">
-                    <tr>
-                      <th>Product</th>
-                      <th>Price</th>
-                      <th>Description</th>
-                    </tr>
-                  </table>
-                </div>
-              </div>
-            </form>
+    <div class="container-fluid">
+      <button type="button" class="btn btn-primary m-3" id="redirect"></button>
+      <div class="row gap-5 p-5" id="products-row">
+        <!-- <div class="card col-2 py-3">
+          <img
+            src="https://static-01.daraz.pk/p/884da2f5953f0ea4057d1709aa2cd0d6.jpg_750x750.jpg_.webp"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Iphone X</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
 
-    <script type="module" src="./scripts/main.js"></script>
+    <script type="module" src="./scripts/products-get.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
