--- a/Login-SignUp/Firebase - SignUp/signUp.html
+++ b/Login-SignUp/Firebase - SignUp/signUp.html
@@ -13,7 +13,37 @@
     />
   </head>
   <body>
-    <div class="container text-center">
+    <nav class="navbar navbar-expand-lg bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand text-white" href="#">E-Comm</a>
+        <button
+          class="navbar-toggler bg-light"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active text-white" aria-current="page" href="#"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!--  -->
+    <!-- <div class="container text-center">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-8 m-auto mt-5">
           <div class="auth-container">
@@ -76,13 +106,125 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
+    <!--  -->
+
+    <section class="vh-100">
+      <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <div class="card text-white bg-dark" style="border-radius: 1rem;">
+              <div class="card-body p-5 text-center">
+                <div class="mb-md-5 mt-md-3 pb-5 auth-container">
+                  <form id="signUpFormer">
+                    <h2 class="fw-bold mb-2 text-uppercase">SignUp</h2>
+                    <p class="text-white-50 mb-5">
+                      Welcome! Create your account to see products
+                    </p>
+
+                    <div class="form-outline form-white mb-4 form-floating">
+                      <input
+                        type="text"
+                        id="floatingName"
+                        class="form-control form-control-lg"
+                        placeholder="Enter your Full Name"
+                      />
+                      <label
+                        class="form-label text-secondary"
+                        for="floatingName"
+                        >Name</label
+                      >
+                    </div>
+
+                    <div class="form-outline form-white mb-4 form-floating">
+                      <input
+                        type="email"
+                        id="floatingInput"
+                        class="form-control form-control-lg"
+                        placeholder="Enter your email"
+                      />
+                      <label
+                        class="form-label text-secondary"
+                        for="floatingInput"
+                        >Email</label
+                      >
+                    </div>
+
+                    <div class="form-outline form-white mb-4 form-floating">
+                      <input
+                        type="password"
+                        id="floatingPassword"
+                        class="form-control form-control-lg"
+                        placeholder="Enter your email"
+                      />
+                      <label
+                        class="form-label text-secondary"
+                        for="floatingPassword"
+                        >Password</label
+                      >
+                    </div>
+
+                    <div class="form-outline form-white mb-4 form-floating">
+                      <input
+                        type="password"
+                        id="floatingPassword2"
+                        class="form-control form-control-lg"
+                        placeholder="Enter your email"
+                      />
+                      <label
+                        class="form-label text-secondary"
+                        for="floatingPassword2"
+                        >Confirm Password</label
+                      >
+                    </div>
+
+                    <button
+                      class="btn btn-outline-light btn-lg px-5"
+                      type="submit"
+                    >
+                      Sign Up
+                    </button>
+
+                    <div
+                      class="d-flex justify-content-center text-center mt-4 pt-1 third-party-login"
+                    >
+                      <a href="#!" class="text-white facebook icon mx-3"
+                        ><i class="fab fa-facebook-f fa-lg"></i
+                      ></a>
+                      <a href="#!" class="text-white github icon mx-3"
+                        ><i class="fab fa-twitter fa-lg mx-4 px-2"></i
+                      ></a>
+                      <a href="#!" class="text-white google icon mx-3"
+                        ><i class="fab fa-google fa-lg"></i
+                      ></a>
+                    </div>
+                  </form>
+                </div>
+
+                <div>
+                  <p class="mb-0">
+                    Already a user?
+                    <a
+                      href="../Firebase - Login/login.html"
+                      class="text-white-50 fw-bold custom-hover"
+                      >Sign In</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--  -->
     <script type="module" src="./signUp.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
