--- a/Login-SignUp/Forgot Password/forgotPass.html
+++ b/Login-SignUp/Forgot Password/forgotPass.html
@@ -13,6 +13,34 @@
     />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand text-white" href="#">E-Comm</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active text-white" aria-current="page" href="#"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6 m-auto mt-5">
@@ -30,7 +58,7 @@
                 />
                 <label for="floatingInput">Email address</label>
               </div>
-              <button type="submit" class="btn btn-primary w-100">
+              <button type="submit" class="btn btn-dark w-100">
                 Next
               </button>
             </form>
