--- a/index.html
+++ b/index.html
@@ -13,20 +13,76 @@
     <title>Products</title>
   </head>
   <body>
-    <div class="container-fluid">
-      <button type="button" class="btn btn-primary m-3" id="redirect"></button>
-      <div class="row gap-5 p-5" id="products-row">
-        <!-- <div class="card col-2 py-3">
+    <nav class="navbar navbar-expand-lg bg-dark bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand text-white" href="#">E-Comm</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active text-white" aria-current="page" href="#"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#"> </a>
+            </li>
+          </ul>
+          <!-- <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success text-white" type="submit">
+              Search
+            </button>
+          </form> -->
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown mx-5 px-2">
+              <a
+                class="nav-link dropdown-toggle text-white"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Account
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" id="signOut">Sign Out</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid" id="main-container">
+      <div class="row gap-1 p-md-5" id="products-row">
+        <!-- <div class="card col-6 md-col-2 py-1">
           <img
             src="https://static-01.daraz.pk/p/884da2f5953f0ea4057d1709aa2cd0d6.jpg_750x750.jpg_.webp"
-            class="card-img-top"
+            class="card-img-top m-auto"
             alt="..."
+            style="aspect-ratio: 1/1; width: 100px;"
           />
           <div class="card-body">
             <h5 class="card-title">Iphone X</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Some quick example text to build
             </p>
           </div>
         </div> -->
@@ -39,5 +95,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
