--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">E-Comm</a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler bg-light"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
