--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <title>Products</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-dark bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">E-Comm</a>
         <button
-          class="navbar-toggler"
+          class="navbar-toggler bg-light"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
@@ -35,20 +35,9 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#"> </a>
+              <a class="nav-link text-white" href="#"></a>
             </li>
           </ul>
-          <!-- <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success text-white" type="submit">
-              Search
-            </button>
-          </form> -->
           <ul class="navbar-nav">
             <li class="nav-item dropdown mx-5 px-2">
               <a
